# geo-mapper

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements.txt
geo_mapper/: __init__.py  __main__.py  cli.py
geo_mapper/geodata_raw/lau/: LAU_RG_01M_2011_3035.geojson  LAU_RG_01M_2012_3035.geojson  LAU_RG_01M_2013_3035.geojson  LAU_RG_01M_2014_3035.geojson  LAU_RG_01M_2015_3035.geojson  LAU_RG_01M_2016_3035.geojson  LAU_RG_01M_2017_3035.geojson  LAU_RG_01M_2018_3035.geojson  LAU_RG_01M_2019_3035.geojson  LAU_RG_01M_2020_3035.geojson  LAU_RG_01M_2021_3035.geojson  LAU_RG_01M_2022_3035.geojson  LAU_RG_01M_2023_3035.geojson  (+1 more)
geo_mapper/pipeline/: __init__.py  constants.py  export_results.py  export_selection.py  manual_mapping.py  storage.py
pipeline/: __init__.py  constants.py  export_results.py  export_selection.py  manual_mapping.py  storage.py
pipeline/geodata_loader/: __init__.py
pipeline/geodata_selection/: __init__.py
pipeline/load_csv/: __init__.py
pipeline/mapping/: __init__.py  selection.py
pipeline/select_column/: __init__.py
pipeline/utils/: text.py
prepare/: __init__.py  clean_geojson_data.py  regionalschluessel.py
test_data/: 04-kreise.xlsx  Kennzahlen-Grunddaten-Kreise.xls  bevlkerung-unter-20-jahr.csv  bevlkerung-unter-20-jahr.xlsx  kreise.xls  wiki.csv  wiki_landkreise_kreisfreie_staedte.csv
test_data/toan/: data_matrix.csv  meta.json
tests/: test_cli_with_test_files.py  test_constants_and_load_csv.py  test_export_results_unit.py  test_manual_mapping_meta.py  test_mappers_logic.py
(+97 files in other folders)
