[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-mapper"
version = "0.1.0b1"
description = "CLI to map CSV/Excel rows onto German NUTS/LAU geodata with interactive helpers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Friedrich Volkers"}]
keywords = ["geodata", "NUTS", "LAU", "GIS", "CSV"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyproj==3.7.1",
    "pandas==2.3.0",
    "questionary==2.1.1",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",
]

[project.scripts]
geo-mapper = "geo_mapper.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["geo_mapper*"]
